[metadata]
author = Florian Matter
author_email = fmatter@mailbox.org
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = Create human-friendly IDs from strings.
keywords =
    ids
    slugify
long_description = file: README.md
long_description_content_type = text/markdown
name = humidifier
project_urls =
    Bug Tracker = https://github.com/fmatter/humidifier/issues
url = https://github.com/fmatter/humidifier
version = 0.0.2.dev

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
install_requires = 
    colorlog
    python-slugify



[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    prospector[with_pyroma]==1.7.6
    pylint==2.14.1
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    sphinxcontrib-napoleon
    tox
    myst_parser
    flake8
    twine
    jinja2
    keepachangelog
publishing =
    twine
    wheel

[options.packages.find]
include = humidifier, humidifier.*
where = src

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = humidifier
src_paths = humidifier,tests
line_length = 120

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
addopts = --cov
testpaths = tests

[coverage:run]
source =
    humidifier

[coverage:report]
show_missing = true